@@ -2,6 +2,10 @@
 
 	* queryOperation.c:
 	Fixed 169353: problem with certain queries
+	
+	* instance.c:
+	2nd fix for 1690525: instance comparison might fail in case of NULL
+	pointer
 
 2007-03-29  Sven Schuetz <sven@de.ibm.com>
 
